# httpserver

./: .env.example  .gitignore  Cargo.toml  README.md  modularize.md  plan.md  rust-error-handling.html
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  api.ts  auth.ts  router.ts  style.css
frontend/src/views/: CallbackView.vue  HomeView.vue  LoginView.vue  UsersView.vue
migrations/: 0001_initial.sql
src/: app.rs  auth.rs  clock.rs  config.rs  crypto.rs  db.rs  error.rs  mail.rs  main.rs  routes.rs  state.rs  validation.rs
src/db/: magic_links.rs  users.rs
src/dto/: auth.rs  users.rs
src/routes/: auth.rs  health.rs  users.rs
