[package]
name = "httpserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-login = "0.18"
base64 = "0.22"
dotenvy = "0.15"
postmark = { version = "2.0", features = ["reqwest-rustls-tls"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit", "request-id", "set-header", "timeout", "trace"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
